Add Preference to control metric vs imperial.
